# mev-sandwich-bot

./: .env.example  .gitignore  Cargo.toml  README.md  foundry.toml  remappings.txt
contracts/: SandwichExecutor.sol
script/: Deploy.s.sol
src/: config.rs  main.rs
src/analysis/: simulator.rs
src/contracts/: mod.rs
src/execution/: bundle.rs
src/mempool/: decoder.rs  listener.rs  mod.rs
