[package]
name = "mev-sandwich-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum - use latest alloy which is compatible with latest serde
alloy = { version = "1.3", features = ["full", "node-bindings"] }

# EVM simulation - use latest revm compatible with alloy 1.x
revm = { version = "33", default-features = false, features = ["std", "serde"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
eyre = "0.6"
hex = "0.4"
dashmap = "6"
rust_decimal = "1.36"
reqwest = { version = "0.12", features = ["json"] }
